<resources>
    <string name="app_name">Vbox</string>
    <string name="local_videos">本地视频</string>
    <string name="net_videos">推荐资源</string>
    <string name="play">播放</string>
    <string name="scan">扫描</string>
    <string name="settings">设置</string>
    <string name="menu_main">main</string>
    <string name="menu_folder">folder</string>
    <string name="video_name_test">一带一路专题</string>
    <string name="video_size_test">60KB</string>
    <string name="video_time_test">时长：0:20:35</string>
</resources>
