<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="6dp"
    android:layout_height="65dp">

    <ImageView
        android:id="@+id/iv_video_cover"
        android:src="@mipmap/ic_launcher"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/iv_video_cover"
        android:layout_toEndOf="@id/iv_video_cover"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_video_name"
            android:layout_width="wrap_content"
            android:text="@string/video_name_test"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/tv_video_size"
            android:layout_width="wrap_content"
            android:text="@string/video_size_test"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/tv_video_time"
            android:layout_width="wrap_content"
            android:text="@string/video_time_test"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>

</RelativeLayout>