<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_bottom_menu_bar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="70dp">
        <TextView
            android:id="@+id/tv_bottom_local_videos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:textColor="@color/black54"
            android:drawableTop="@mipmap/icon_tab_localvideo"
            android:text="@string/local_videos"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_bottom_resources"
            android:layout_width="0dp"
            android:drawablePadding="4dp"
            android:textColor="@color/black54"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_tab_transport"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/net_videos"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_bottom_settings"
            android:layout_width="0dp"
            android:textColor="@color/black54"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:drawableTop="@mipmap/icon_tab_setting"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:layout_height="wrap_content" />
</LinearLayout>
